# gpt2

./: .gitignore  Dockerfile  app.py  embeddings-3d.json  epyproject.toml  main.py  plotly-cloud.toml  pyproject.toml  readme.md  requirements.txt
assets/: 00_base.css  base.css  component.css  flex.css  layout.css  margin.css  padding.css  sizing.css  style.css  typography.css  visuals.css
scripts/: 3d_token_embedding.py
src/: markdown.py  pipeline.py
src/llm/: __init__.py  embeddings.py  model.py  tokenizer.py
src/markdown/: __init__.py  factory.py  markdown.py
src/markdown/tags/: bullet.py  heading.py  hyperlink.py  paragraph_with_hyperlink.py
src/models/: tinygpt2.py
src/pages/visualizing_llm/: __init__.py  page.py
src/pages/visualizing_llm/interactive/: autoregressive.py  embeddings_plot.py  embeddings_similarity.py  learning_rate.py  positional_encoding.py  temperature.py  tokens.py
