[project]
name = "gpt2"
version = "0.1.0"
description = ""
authors = [
    {name = "ki8yk8",email = "ki8yk8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers (>=4.57.3,<5.0.0)",
    "torch (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
