[tool.poetry]
name = "gpt2"
version = "0.1.0"
description = ""
authors = ["ki8yk8 <ki8yk8@gmail.com>"]
readme = "readme.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
transformers = "^4.57.3"
torch = "^2.9.1"
dash = { extras = ["cloud"], version = "^3.3.0" }
pandas = "^2.3.3"
scikit-learn = "^1.8.0"
networkx = "*"
numpy = "^2.4.0"
plotly = {extras = ["express"], version = "^6.5.0"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
